--- a/index.html
+++ b/index.html
@@ -22,9 +22,29 @@
 
     <!-- MAIN -->
     <div id="root">
-        <div class="add-todo">
-            <input type="text" name="" id="">
-            
+
+        <!-- Filters -->
+        <div class="add-todo-filter">
+            <input type="text" name="" id="" placeholder="">
+            <button>Aggiungi</button>
+        </div>
+
+        <!-- Todo list -->
+        <div class="todos">
+            <ul>
+                <li>
+                    <span>Fare a</span>
+                    <i class="fas fa-dumpster"></i>
+                </li>
+                <li>
+                    <span>Fare b</span>
+                    <i class="fas fa-dumpster"></i>
+                </li>
+                <li>
+                    <span>Fare c</span>
+                    <i class="fas fa-dumpster"></i>
+                </li>
+            </ul>
         </div>
     </div>
    
