--- a/index.html
+++ b/index.html
@@ -26,15 +26,25 @@
         <!-- Filters -->
         <div class="add-todo-filter">
             <input type="text" name="" id="" placeholder="New todo" v-model='newTodoText'>
-            <button @click='addNewTodo()'>Aggiungi</button>
+            <button @click='addNewTodo()' @keyup.enter='addNewTodo()'>Aggiungi</button>
         </div>
 
         <!-- Todo list -->
         <div class="todos">
             <ul>
-                <li v-for='element, index in todos' class="done">                    
-                    <span>{{element.text}}</span>
-                    <i @click='deleteTodo(index)' class="fas fa-dumpster"></i>
+                <li v-for='element, index in todos' :class="{'done' : element.done}">
+                    
+                    <div class="checkbox">
+                        <i @click='completeTodo(index)' class="far fa-check-circle"></i>
+                    </div>  
+
+                    <span>
+                        {{element.text}}
+                    </span>
+                    
+                    <div class="delete-btn">
+                        <i @click='deleteTodo(index)' class="fas fa-dumpster"></i>
+                    </div>
                 </li>
             </ul>
         </div>
